--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 version: '3.9'
 
 services:
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=notifications
+      - POSTGRES_PASSWORD=notifications
+      - POSTGRES_DB=notifications
+    networks:
+      - app-net
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
     networks:
       - app-net
     environment:
@@ -11,6 +25,7 @@ services:
 
   kafka:
     image: confluentinc/cp-kafka:latest
+    container_name: kafka
     networks:
       - app-net
     depends_on:
@@ -27,6 +42,7 @@ services:
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
+    container_name: kafdrop
     networks:
       - app-net
     depends_on:
@@ -41,6 +57,8 @@ networks:
     driver: bridge
 
 volumes:
+  postgres_data:
+    driver: local
   zookeeper_data:
     driver: local
   kafka_data:
