--- a/package.json
+++ b/package.json
@@ -14,11 +14,23 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "style": "prettier --loglevel warn --ignore-unknown --no-error-on-unmatched-pattern",
+    "style:check": "yarn style --check",
+    "style:format": "yarn style --write",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "types:check": "tsc --pretty --noEmit",
+    "db:push": "npx prisma db push",
+    "db:migrate": "npx prisma migrate dev",
+    "prisma:studio": "yarn prisma studio",
+    "db:up": "docker-compose up -d",
+    "db:stop": "docker-compose stop",
+    "db:down": "docker-compose down",
+    "pre:commit": "lint-staged",
+    "pre:push": "concurrently \"yarn types:check\" \"yarn lint . --max-warnings 0\" \"yarn style:check .\" \"yarn test\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -43,10 +55,14 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.2",
     "jest": "28.1.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
