adicionando arquivos de configuraçõs na aplicação

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,9 @@
+# Application
+PORT=3000
+
 # Database
 DATABASE_URL="postgresql://notifications:notifications@localhost:5432/notifications?schema=public"
 
-#Kafka
+# Kafka
 KAFKA_BROKERS=["localhost:9092"]
+KAFKA_CONSUMER_CLIENT_ID="notifications"
