--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@config/*": ["./src/config/*"],
       "@core/*": ["./src/core/*"],
       "@infra/*": ["./src/infra/*"],
       "@modules/*": ["./src/modules/*"],
