--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config jest-e2e.config.ts",
+    "test:uni": "jest --config jest-uni.config.ts",
     "types:check": "tsc --pretty --noEmit",
     "db:push": "dotenv -e .env.development -- npx prisma db push",
     "db:migrate": "dotenv -e .env.development -- npx prisma migrate dev",
@@ -39,10 +41,11 @@
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^4.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "kafkajs": "^2.2.3",
+    "prisma": "^4.10.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -66,6 +69,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.2",
     "jest": "28.1.3",
+    "jest-circus": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
