--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jest-circus": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.3.2",
+    "prisma-dbml-generator": "^0.10.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
